Expand README with instructions for running GPULlama3 example using TornadoVM